--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,8 @@
 [user]
 	name = dyc5828
 	email = dyc5828@gmail.com
+[credential]
+	helper = 
+	helper = /usr/local/share/gcm-core/git-credential-manager
+[credential "https://dev.azure.com"]
+	useHttpPath = true
