--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 .dotfiles
 .local/*
 Brewfile.lock.json
+Applications/*
+code/*
+Desktop/*
+Documents/*
+homebot/*
+Library/*
+Movies/*
+Music/*
+Pictures/*
+Public/* 
