--- a/.gitconfig
+++ b/.gitconfig
@@ -5,5 +5,7 @@
 	useHttpPath = true
 [credential]
 	helper = osxkeychain
+	helper = 
+	helper = /usr/local/share/gcm-core/git-credential-manager
 [url "https://<TOKEN>:@github.com/"]
 	insteadOf = https://github.com/
