fixed install script and disable vscode ruby lsp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,8 @@
     "**/Pictures": true,
     "**/Public": true,
     "**/homebot": true
+  },
+  "rubyLsp.indexing": {
+    "enabled": false
   }
 }
