git auto config remote

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,3 +9,5 @@
 	helper = /usr/local/share/gcm-core/git-credential-manager
 [url "https://<TOKEN>:@github.com/"]
 	insteadOf = https://github.com/
+[push]
+	autoSetupRemote = true
